--- a/src/css/base/fonts.scss
+++ b/src/css/base/fonts.scss
@@ -1,4 +1,12 @@
 @font-face {
+  font-family: $font-space-grotesk;
+  src: url("/public/fonts/SpaceGrotesk-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
   font-family: $font-george-x;
   src: url("/public/fonts/george-x-regular.woff2") format("woff2"),
     url("/public/fonts/george-x-regular.woff") format("woff");
